data/all_generated_tests/raw_wast_tests/return_IncorrectConditionEvaluation_2870.wast
;; 9. **Return Following Invalid Operand Condition**:    - Create a function where an invalid operand type is introduced conditionally before a return. Validate if the error handling catches this and manages final return correctly.    - **Reasoning**: This examines the error-handling efficiency, ensuring that type mismatches and condition checks are properly handled by `popE`.

(assert_invalid
  (module
    (func $invalid-operands-before-return (result i32)
      (i32.const 0)
      (i64.const 0)
      (return)
    )
  )
  "type mismatch"
)